--- a/gameoflife/src/index.css
+++ b/gameoflife/src/index.css
@@ -1,4 +1,3 @@
-  
 .box {
   display: inline-block;       
   border: 1px solid navy;
@@ -32,4 +31,9 @@
   margin: auto;
   box-shadow: 0px 0px 20px green;
   margin-top: 40px;
+}
+
+p {
+  border: 2px solid red;
+  width: 75%
 }
