--- a/gameoflife/src/index.css
+++ b/gameoflife/src/index.css
@@ -1,6 +1,7 @@
+
 .box {
   display: inline-block;       
-  border: 1px solid navy;
+  border: 1px solid dodgerblue;
   width: 17px;
   height: 17px;
   margin-left: -1px;
@@ -30,7 +31,7 @@
   line-height: 0;
   margin: auto;
   box-shadow: 0px 0px 20px green;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 p {
