--- a/gameoflife/src/index.css
+++ b/gameoflife/src/index.css
@@ -29,9 +29,10 @@
 .grid {
   width: 150px;
   line-height: 0;
-  margin: auto;
   box-shadow: 0px 0px 20px green;
+  margin: auto;
   margin-top: 50px;
+  margin-bottom: 50px
 }
 
 p {
