--- a/gameoflife/src/index.css
+++ b/gameoflife/src/index.css
@@ -49,7 +49,7 @@ h1 {
   margin: auto;
   width: 50%;
   font-family: Notable;
-  color: white;
+  color: black;
   background-color: dodgerblue
 }
 
